[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Utilities/TargetDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Utilities/Stats.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 17.5067

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.1238
height = 29.3232

[sub_resource type="CircleShape2D" id=3]
radius = 272.7

[sub_resource type="CircleShape2D" id=4]
radius = 29.9913

[sub_resource type="CircleShape2D" id=5]
radius = 23.726

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.377376, -22.8299 )
scale = Vector2( 0.988208, 1.21816 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.126999, -10.6247 )
scale = Vector2( 0.84394, 1.00269 )
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 64

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.554779, -22.4686 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 10

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -0.880249, -22.8866 )
shape = SubResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 48

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -0.27739, -23.0234 )
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
max_health = 10
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]

[editable path="HitBox"]

[editable path="Stats"]
